ref c code is done

--- a/ref/Makefile
+++ b/ref/Makefile
@@ -1,15 +1,15 @@
 CFLAGS := -O2 -Wall -ggdb
 
 
-test_Kasumi: test_Kasumi.c Kasumi.o
+test_kasumi: test_kasumi.c kasumi.o
 	gcc $(CFLAGS) $^ -o $@
 
-Kasumi.o: Kasumi.c Kasumi.h
+kasumi.o: kasumi.c kasumi.h
 	gcc $(CFLAGS) $< -c -o $@
 
 
 .PHONY: clean
 clean:
-	rm -f *.o test_Kasumi
+	rm -f *.o test_kasumi
 
 
